tests/NormalTests/paczka1/fuzzy1/15895663.err
Error in line 4: 0iKED A534 57,3
Error in line 12: 6siFCkbS A534 69,8
Error in line 14: A412 A534 60,8
Error in line 18: 6siFCkbS A56 96,91
Error in line 15: 6siFCkbS A412 11,7
Error in line 11: 2JBZXkpJk A593 15,0
Error in line 28: 2JBZXkpJk A412 91,1
Error in line 23: QWV A56 92,6
